<?xml version="1.0" encoding="utf-8"?>

<!--Esse ScrollView não aparece a barra de rolagem-->
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_somar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bt_soma"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_subtracao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bt_subtracao"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_somar"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_divisao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bt_divisao"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_subtracao"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_multiplicacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bt_multiplicacao"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColorHint="@android:color/white"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_divisao"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_valor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/edi_valor1"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_multiplicacao"
        app:layout_constraintEnd_toStartOf="@id/edit_valor2"/>

    <EditText
        android:id="@+id/edit_valor2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColorHint="@color/black"
        android:hint="@string/edi_valor2"
        android:gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_multiplicacao"
        app:layout_constraintStart_toEndOf="@id/edit_valor1" />

    <TextView
        android:id="@+id/txt_resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_resultado"
        android:textSize="50dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/edit_valor1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>